kubernetes/catalogo-service.yaml
apiVersion: v1
kind: Service
metadata: 
  nome: catalogo-service
spec:
  selector:
    app: catalogo
  ports:
    name:  catalogo-service
    port: 80
    - containerPort: 5003
