kubernetes/cliente-service.yaml
apiVersion: v1
kind: Service
metadata: 
  nome: cliente-service
spec:
  selector:
    app: cliente
  ports:
    name:  cliente-service
    port: 80
    - containerPort: 5000
