kubernetes/endereco-service.yaml
apiVersion: v1
kind: Service
metadata: 
  nome: endereco-service
spec:
  selector:
    app: endereco
  ports:
    name:  endereco-service
    port: 80
    - containerPort: 5001
